--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "firebase": "^5.6.0",
     "vue": "^2.5.17",
-    "vue-router": "^3.0.1"
+    "vue-mq": "^0.2.1",
+    "vue-router": "^3.0.1",
+    "vuefire": "^2.0.0-alpha.16"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
