--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "firebase": "^5.7.0",
+    "sendgrid": "^5.2.3",
     "vue": "^2.5.17",
+    "vue-confetti": "^0.4.2",
     "vue-meta": "^1.5.8",
     "vue-mq": "^0.2.1",
     "vue-router": "^3.0.1",
