--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "firebase": "^5.7.0",
+    "firebase-functions": "^2.2.0",
     "sendgrid": "^5.2.3",
     "vue": "^2.5.17",
     "vue-confetti": "^0.4.2",
