--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-confetti": "^0.4.2",
     "vue-meta": "^1.5.8",
     "vue-mq": "^0.2.1",
+    "vue-notification": "^1.3.16",
     "vue-router": "^3.0.1",
     "vuefire": "^2.0.0-alpha.19"
   },
